[package]
name = "value-traits"
version = "0.1.0"
edition = "2024"
description = "Traits for implicit collections"
repository = "https://github.com/vigna/value-traits-rs/"
license = "Apache-2.0 OR LGPL-2.1-or-later"
readme = "README.md"
authors = [
	"Tommaso Fontana <tommaso.fontana.96@gmail.com>",
	"Sebastiano Vigna <sebastiano.vigna@unimi.it>",
]

[dependencies]

[features]
default = ["std"]
std = ["alloc"]
alloc = []
