[package]
name = "value-traits-derive"
version = "0.1.0"
edition = "2021"
description = "Procedural macros for the value-traits crate"
repository = "https://github.com/vigna/value-traits-rs/"
license = "Apache-2.0 OR LGPL-2.1-or-later"
readme = "../README.md" # Points to the main README
authors = [
	"Tommaso Fontana <tommaso.fontana.96@gmail.com>",
	"Sebastiano Vigna <sebastiano.vigna@unimi.it>",
]
keywords = ["proc-macro", "derive", "value-traits"]
categories = ["development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["extra-traits"] }
