[package]
name = "value-traits"
version = "0.2.1"
edition = "2024"
description = "By-value slices and iterators"
repository = "https://github.com/vigna/value-traits-rs/"
license = "Apache-2.0 OR LGPL-2.1-or-later"
categories = ["rust-patterns", "no-std"]
readme = "README.md"
authors = [
	"Tommaso Fontana <tommaso.fontana.96@gmail.com>",
	"Sebastiano Vigna <sebastiano.vigna@unimi.it>",
]

[dependencies]
value-traits-derive = { workspace = true, optional = true }

[features]
default = ["std", "derive"]
std = ["alloc"]
alloc = []
derive = ["value-traits-derive"]
